tests/golden/fixtures/syntax-store-from-a-far-load/expected.err
Error: 'ptr' is a 3-byte :far value; no register can hold it directly.
   ╭─[ tests/golden/fixtures/syntax-store-from-a-far-load/input.k65:5:11 ]
   │
 5 │     dst = a = ptr
   │           ───┬───  
   │              ╰───── here
   │ 
   │ Help: use a partial view (e.g. ptr:word for the low 16 bits, (ptr+2):byte for the bank byte) or indirect-long ([ptr])
───╯

Error: Store to var dst:byte requires @a8.
   ╭─[ tests/golden/fixtures/syntax-store-from-a-far-load/input.k65:5:5 ]
   │
 5 │     dst = a = ptr
   │     ───┬───  
   │        ╰───── store under @a16
   │ 
   │ Help: switch the accumulator to 8-bit with `@a8` before this store, or write a 16-bit view (e.g. declare `dst:word`) so the active `@a16` mode is allowed
   │ 
   │ Note: K816 enforces operand-width matching at lowering time: typed loads/stores must run under a register-width mode (`@a8`/`@a16` or `@i8`/`@i16`) that produces opcodes of the correct width. The 65816 has no "narrowing" load that drops half a 16-bit value into an 8-bit register — the encoding itself differs.
───╯
